# commitizen-spdx-changelog

./: .editorconfig  .envrc  .gitignore  AGENTS.md  Makefile  README.md  devbox.json  devbox.lock.license  local.env  opencode.jsonc  pyproject.toml  zensical.toml
.github/workflows/: ci.yaml  docs.yaml  publish.yaml
.opencode/commands/: opsx-apply.md  opsx-archive.md  opsx-explore.md  opsx-propose.md  opsx-sync.md
.opencode/skills/openspec-apply-change/: SKILL.md
.opencode/skills/openspec-archive-change/: SKILL.md
.opencode/skills/openspec-explore/: SKILL.md
.opencode/skills/openspec-propose/: SKILL.md
.opencode/skills/openspec-sync-specs/: SKILL.md
docs/: api.md  changelog.md  contributing.md  credits.md  devbox.md  guide.md  index.md  license.md  readme.md
docs/plans/: 01-problem-and-goal.md  02-scaffolding.md  03-design.md  04-pyproject.md  05-tests.md  06-ci-cd.md  07-reuse-and-smoke-test.md  08-release.md  09-doc-generation.md  10-collapse-impl.md  11-direct-subclass.md  index.md
openspec/changes/archive/2026-06-20-consolidate-plans/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-20-doc-generation/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-20-reproduce-bug/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-docs-best-practices/: design.md  (+3 more)
openspec/changes/collapse-impl-module/: design.md  proposal.md  tasks.md
openspec/changes/direct-subclass/: .openspec.yaml  tasks.md
openspec/changes/docs-best-practices/: design.md  proposal.md  tasks.md
openspec/specs/bug-reproduction/: spec.md
openspec/specs/docs-api-enhancement/: spec.md
openspec/specs/docs-guide/: spec.md
openspec/specs/docs-landing/: spec.md
openspec/specs/plan-01-problem-goal/: spec.md
openspec/specs/plan-02-scaffolding/: spec.md
openspec/specs/plan-03-design/: spec.md
openspec/specs/plan-04-pyproject-toml/: spec.md
openspec/specs/plan-05-tests/: spec.md
openspec/specs/plan-06-ci-cd/: spec.md
openspec/specs/plan-07-reuse-smoke/: spec.md
openspec/specs/plan-08-release/: spec.md
openspec/specs/plan-09-doc-generation/: spec.md
openspec/specs/plan-index/: spec.md
openspec/specs/plugin-integration-tests/: spec.md
openspec/specs/spdx-markdown-formatter/: spec.md
scripts/: reproduce_bug.py
src/commitizen_spdx_changelog/: __init__.py
src/commitizen_spdx_changelog/formatters/: __init__.py  _impl.py  spdx_markdown.py
tests/: conftest.py  test_plugin_integration.py  test_reproduce_bug.py  test_spdx_markdown.py
(+32 files in other folders)
